# python-template

./: .envrc.example  .gitignore  README.md  badges.md  justfile  pyproject.toml
.github/workflows/: code-quality.yaml  coverage.yaml  publish.yaml  tests.yaml
tests/: test_main.py
