[project]
name = "python-template"
dynamic = ["version"]  # Version is managed by git tags
description = "Template for python projects, using modern tooling and practices"
readme = "README.md"
# authors = [
#     { name = "Author Name", email = "author@email.com" }
# ]

# For public libraries, use the oldest supported python version
# For private libraries, use the most recent python version
requires-python = ">=3.13"

dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",  # Git hooks for code quality
    "pyright>=1.1.400",   # Static type checker
    "pytest>=8.3.5",      # Testing framework
    "pytest-cov>=6.1.1",  # Test coverage reporting
    "ruff>=0.11.7",       # Linter and formatter
]

# ------------------------------------------------------------------------------
# Build
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

# Version management using git tags
[tool.hatch.version]
source = "vcs"

# https://docs.astral.sh/uv/concepts/projects/config/#project-packaging
# will force a project to be built and installed into the project environment
[tool.uv]
package = true

# Make project runnable from command line
# After installing a library, running `python_template` will run the `main` function
[project.scripts]
python_template = "python_template.main:main"

# ------------------------------------------------------------------------------
# Linting
# ------------------------------------------------------------------------------

[tool.ruff]
line-length = 120

# Set of rules taken from https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = [
    "E",   # pycodestyle - Python style guide
    "F",   # Pyflakes - Python linter
    "I",   # isort - Import sorting
    "B",   # flake8-bugbear - Bug detection
    "UP",  # pyupgrade - Python upgrade tool
    "SIM", # flake8-simplify - Code simplification
]

# Tell Ruff/isort that python_template is first party, so that it puts it last in the imports
[tool.ruff.lint.isort]
known-first-party = ["python_template"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"  # Choose same version as in `requires-python`

# Ignore lines in the main block for coverage purposes
[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
